Fix a bunch of errors and unit tests for local runs
When running TF unit tests locally after lunching a target
the behavior was slightly different from regular runs so
it resulted in some failure seen.

Test: run locally
lunch,
vendor/google_tradefederation/core/tests/run_tradefed_presubmit.sh
Bug: None

Change-Id: I6a46050c049416bc1b62f873a1d5226cf81f0a6a